      <computers@chrisking.com>, with minor modifications.
      - To use, add these parameters to your rate request:
        
        cod            => 1,      # Enable C.O.D.
        cod_value      => 400.00, # C.O.D. value in USA dollars.
        cod_funds_code => 0,      # 0 = All funds allowed, 
	                          # 8 = money order only.


1.54  Sep 21 2004


  General
    
    * [Enh] Major documentation updates and fixes
      - Added Test::Pod tests as well as Test::Pod::Coverage
      - Added POD for functions that lacked any.
    
    * [Enh] Major test updates
    
    * [Enh] Automatically detect which shippers can be supported based on the
      installed required modules.
      
    * [Enh] Skip tests that are for shippers that do not have their required
      modules installed.    
    
    * [Enh] Add "use_defaults=1" option to "perl Makefile.PL"
      - New options: -u=1 or --use_defaults=1: Use default values, do not ask 
        for values.
    
    * [Fixed] Business::Shipping requiring too many modules.  Switched to Basic.
    
    * [Fixed] Business::Shipping tests will fail if someone only installed
      Bundle::Business::Shipping::UPS_Offline, because the testing scripts
      will not notice.
      - New system checks to see if prerequisite modules were installed before
        testing functionality that depends on them. 


1.53  Sep 17 2004


  General
  
    * [Fixed] [Doc] Reference to logdie in Shipping.pm.
    
    * [Done] [Enh] Allow preloading of modules
      - New optional syntax: 
        use Business::Shipping { preload => 'All' };
        use Business::Shipping { preload => 'USPS_Online' };
      - Without preloading, some modules will be loaded at runtime.  Normally, 
        runtime loading is the best mode of operation.  However, there are some
        circumstances when preloading is advantagous (see docs).
        
    * [Enh] Split the data into its own distribution, and add it to the bundle.