@@ -145,8 +145,7 @@ Zaire	Congo, Democratic Republic of the
 EOF
 
 [ups_information]
-# Surcharge as of Oct 4, 2004.
-fuel_surcharge=9.50%
+# Surcharge is now recorded in the fuel_surcharge.txt file.
 
 express_plus_adder=40.00
 always_calc_zone_data=0
