@@ -1,0 +1,2 @@
+Fuel Surcharge: 11
+Good Through Date: 20041205
